User login page

--- a/blender-today/application/static/css/font-borg.css
+++ b/blender-today/application/static/css/font-borg.css
@@ -15,7 +15,7 @@
 	font-style:normal;
 	text-decoration:inherit;
 	-webkit-font-smoothing:antialiased;
-	display:inline;
+	display:inline-block;
 	width:auto;
 	height:auto;
 	line-height:normal;
