--- a/blender-today/application/templates/security/_macros.html
+++ b/blender-today/application/templates/security/_macros.html
@@ -1,23 +1,25 @@
 {% macro render_field_with_errors(field) %}
+
     {{ field.label }} {{ field(**kwargs)|safe }}
+
     {% if field.errors %}
-      <div class="error">
-      {% for error in field.errors %}
-        <span class="error_item danger">{{ error }} <i class="fa fa-warning"></i></span>
-      {% endfor %}
-      </div>
+      <ul class="error">
+        {% for error in field.errors %}<li>{{ error }}</li>{% endfor %}
+      </ul>
     {% endif %}
+
 {% endmacro %}
 
 {% macro render_field_with_errors_without_label(field) %}
+
     {{ field(**kwargs)|safe }}
+
     {% if field.errors %}
-      <div class="error">
-      {% for error in field.errors %}
-        <span class="error_item danger">{{ error }} <i class="fa fa-warning"></i></span>
-      {% endfor %}
-      </div>
+      <ul class="error">
+        {% for error in field.errors %}<li>{{ error }}</li>{% endfor %}
+      </ul>
     {% endif %}
+
 {% endmacro %}
 
 {% macro render_field(field) %}
@@ -25,14 +27,15 @@
 {% endmacro %}
 
 {% macro render_login_field_with_errors(field) %}
+
     {{ field(**kwargs)|safe }}
+
     {% if field.errors %}
-      <div class="error">
-      {% for error in field.errors %}
-        <span class="error_item danger">{{ error }} <i class="fa fa-warning"></i></span>
-      {% endfor %}
-      </div>
+      <ul class="error">
+        {% for error in field.errors %}<li>{{ error }}</li>{% endfor %}
+      </ul>
     {% endif %}
+
 {% endmacro %}
 
 {% macro render_register_field_with_errors(field) %}
