--- a/blender-today/application/templates/_sidebar.html
+++ b/blender-today/application/templates/_sidebar.html
@@ -1,7 +1,7 @@
     <div class="navbar navbar-default navbar-static-top" role="navigation">
 
         <nav class="collapse navbar-collapse" id="navbar-collapse-menu">
-          <ul class="nav navbar-nav navbar-right">
+          <ul class="nav navbar-nav">
 
             <li data-dialog="submit"
                 class="navbar-submit{% if current_user.is_anonymous() %} popover-submit{% endif %}"
