--- a/blender-today/application/templates/posts/view.html
+++ b/blender-today/application/templates/posts/view.html
@@ -39,13 +39,6 @@
 		<div class="clearfix"></div>
 
 		<div class="post-view-content" id="post-content">{{post.content|safe}}</div>
-		{% if current_user.is_owner %}
-			<span id="edit-post-toggle" class="btn btn-default">Edit</span>
-			<a id="edit-post-save" class="btn btn-default" href="{{ url_for('posts.edit', uuid=post.uuid) }}">Save</a>
-			{% if post.status != 'deleted' %}
-			<a id="edit-post-delete" class="btn btn-default" href="{{ url_for('posts.delete', uuid=post.uuid) }}">Delete</a>
-			{% endif %}
-		{% endif %}
 
 		{% if post.picture %}
 		<div class="post-view-content-image">
@@ -74,6 +67,31 @@
 				</div>
 				<div class="col-md-11 col-sm-11 col-xs-10">
 					<div class="post-view-details-meta">
+
+						{% if current_user.is_owner %}
+						<div class="post-actions">
+							<a id="edit-post-save" class="post-actions-button save"
+								 href="{{ url_for('posts.edit', uuid=post.uuid) }}">
+								 <i class="fa fa-save"></i>
+							</a>
+							<span id="edit-post-toggle" class="post-actions-button edit">
+								<i class="fa fa-pencil"></i>
+							</span>
+							{% if post.status != 'deleted' %}
+              <a class="edit-post-delete-widget post-actions-button delete" href="">
+                <span class="edit-post-delete-widget-icon"><i class="fa fa-power-off"></i></span>
+                <span class="edit-post-delete-widget-question">?</span>
+              </a>
+
+
+							<a id="edit-post-delete" class="post-actions-button delete"
+								 href="">
+								<i class="fa fa-trash"></i>
+							</a>
+							{% endif %}
+						</div>
+						{% endif %}
+
 						<span class="author-name">{{post.user.first_name}} {{post.user.last_name}}</span>
 						<span class="author-roles">
 							{% if post.user.has_role('network_member') %}
@@ -296,9 +314,6 @@
 						<small>by</small> ' + comment['user_name'] + '\
 						<span class="separator"></span>\
 						<a href="/posts/news/' + comment['post_uuid'] + '/#comment-' + comment['comment_id'] + '"><i class="fa fa-link"></i></a>\
-						<a href="/comments/' + comment['comment_id'] + '/flag" class="post-view-comments-item-flag flag">\
-							<i class="fa fa-flag"></i>\
-						</a>\
 					</div>\
 				</div>\
 			</div> \
@@ -321,8 +336,10 @@
 					var editor = ev.editor;
 					editor.setReadOnly( false );
 				});
-				$(this).hide();
-				$("#edit-post-save").show();
+				$(this).fadeOut(function(){
+					$("#edit-post-save").css('display', 'inline-block');
+					$("#edit-post-save").animate({'opacity' : 1});
+				});
 			});
 			$("#edit-post-save").click(function(e) {
 				e.preventDefault();
@@ -331,12 +348,24 @@
 					function(data){
 				});
 			});
+
+      $('.edit-post-delete-widget').click(function(e){
+        e.preventDefault();
+
+        $('.edit-post-delete-widget-question').animate({'opacity': 1.0, 'left' : 22}, 300);
+        $('.edit-post-delete-widget-icon').css('color', 'crimson');
+        $('.edit-post-delete-widget-icon').animate({'left' : 5}, 250, function(){
+          $('.edit-post-delete-widget').unbind();
+          $('.edit-post-delete-widget').attr('href', '{{ url_for("posts.delete", uuid=post.uuid) }}');
+        });
+      });
+
 			$("#edit-post-delete").click(function(e) {
 				e.preventDefault();
 				$.post($(this).attr("href"), function(data){
-
 				});
 			});
+
 		{% endif %}
 
 	{% else %}
