--- a/blender-today/application/templates/posts/view.html
+++ b/blender-today/application/templates/posts/view.html
@@ -70,6 +70,7 @@
 
 						{% if current_user.is_owner %}
 						<div class="post-actions">
+							{% if post.status != 'deleted' %}
 							<a id="edit-post-save" class="post-actions-button save"
 								 href="{{ url_for('posts.edit', uuid=post.uuid) }}">
 								 <i class="fa fa-save"></i>
@@ -77,17 +78,12 @@
 							<span id="edit-post-toggle" class="post-actions-button edit">
 								<i class="fa fa-pencil"></i>
 							</span>
-							{% if post.status != 'deleted' %}
-              <a class="edit-post-delete-widget post-actions-button delete" href="">
-                <span class="edit-post-delete-widget-icon"><i class="fa fa-power-off"></i></span>
+              <a class="edit-post-delete-widget post-actions-button delete" href=""
+              	 title="Delete Post">
+                <span class="edit-post-delete-widget-icon"><i class="fa fa-trash"></i></span>
                 <span class="edit-post-delete-widget-question">?</span>
               </a>
 
-
-							<a id="edit-post-delete" class="post-actions-button delete"
-								 href="">
-								<i class="fa fa-trash"></i>
-							</a>
 							{% endif %}
 						</div>
 						{% endif %}
@@ -301,15 +297,6 @@
 						' + comment['content'] + '\
 					</div>\
 					<div class="post-view-comments-item-details">\
-						<a href="/comments/' + comment['comment_id'] + '/rate/1" class="post-view-comments-item-rate comment-up up">\
-							<i class="fa fa-chevron-up"></i>\
-						</a>\
-						<a href="/comments/' + comment['comment_id'] + '/rate/0" class="post-view-comments-item-rate down">\
-							<i class="fa fa-chevron-down"></i>\
-						</a>\
-						<span class="separator"></span>\
-						<span class="rating">0</span>\
-						<span class="separator"></span>\
 						<span>' + comment['creation_date'] + '</span>\
 						<small>by</small> ' + comment['user_name'] + '\
 						<span class="separator"></span>\
@@ -351,20 +338,14 @@
 
       $('.edit-post-delete-widget').click(function(e){
         e.preventDefault();
-
-        $('.edit-post-delete-widget-question').animate({'opacity': 1.0, 'left' : 22}, 300);
-        $('.edit-post-delete-widget-icon').css('color', 'crimson');
-        $('.edit-post-delete-widget-icon').animate({'left' : 5}, 250, function(){
-          $('.edit-post-delete-widget').unbind();
+        $('.edit-post-delete-widget-question').animate({'opacity': 1.0, 'left' : 6}, 350);
+        $('.edit-post-delete-widget-icon').animate({'left' : -5}, 250, function(){
           $('.edit-post-delete-widget').attr('href', '{{ url_for("posts.delete", uuid=post.uuid) }}');
+          $.post($('.edit-post-delete-widget').attr("href"), function(data){
+          });
         });
       });
 
-			$("#edit-post-delete").click(function(e) {
-				e.preventDefault();
-				$.post($(this).attr("href"), function(data){
-				});
-			});
 
 		{% endif %}
 
